--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,11 @@
     <artifactId>Oleh_Sichko</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    
+    <dependencies><!-- https://mvnrepository.com/artifact/org.springframework/spring-context -->
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>5.3.12</version>
+        </dependency>
+    </dependencies>
 </project>
