--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+management.endpoints.web.exposure.include:*
+management.endpoint.health.show-details:always
 
+info.app.name=TestingApp
+info.app.description=My awesome service for testing students
+info.app.version=1.0.0
