--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,12 @@ management.endpoint.health.show-details:always
 info.app.name=TestingApp
 info.app.description=My awesome service for testing students
 info.app.version=1.0.0
+
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/test4you
+spring.datasource.username=root
+spring.datasource.password=742456
+
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
